[package]
name = "uwheel_datafusion"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
uwheel = { git = "https://github.com/uwheel/uwheel.git" }
mimalloc = { version = "*", default-features = false, optional = true }
datafusion = "37.1.0"
tokio = { version = "1", features = ["full"] }
parquet = "51.0.0"
chrono = "0.4.38"
minstant = "0.1.7"
fastrand = "2.1.0"
hdrhistogram = "7"
clap = { version = "3.2", features = ["derive"] }
human_bytes = "0.4"
